chore: Apollo Client 및 GraphQL SDK 설정 (#42)
* chore: @use-funnel/browser 추가 (#41)

* chore: react-hook-form, @hookform/resolvers, @hookform/devtools, zod, date-fns 추가 (#41)

* chore: @apollo/client, graphql 추가 (#41)

* chore: 기본 레이아웃 설정 (#41)

* chore: ApolloProvider 설정 (#41)

* chore: @graphql-codegen 추가 (#41)

* chore: 스키마 파일 추가 (#41)

* chore: 쿼리 파일 추가 (#41)

* chore: codegen 설정 (#41)

* feat: 쿼리 기반 타입 및 API 훅 자동 생성 (#41)

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -1,5 +1,17 @@
+@import 'tailwindcss';
 @import '@repo/fds/theme';
 
 @theme inline {
   --font-pretendard: var(--font-pretendard);
+}
+
+@layer base {
+  /* layout */
+  :root {
+    --layout-max-w: 520px;
+    --layout-min-h: 100dvh;
+  }
+  .layout {
+    @apply max-w-[var(--layout-max-w)] min-h-[var(--layout-min-h)] w-full mx-auto relative;
+  }
 }
